# leaffront

./: .gitignore  Cargo.toml  Jenkinsfile  LICENSE  README.md  build.rs  build.sh  build_cross.sh  example_config.toml  example_config_openweathermap.toml
.github/workflows/: rust.yml
backend_null/: Cargo.toml
backend_null/src/: lib.rs
backend_redis/: Cargo.toml
backend_redis/src/: lib.rs
core/: Cargo.toml
core/src/: backend.rs  brightness.rs  lib.rs  pos.rs  version.rs
core/src/input/: mod.rs
core/src/render/: color.rs  font.rs  mod.rs  texture.rs
dbus/: Cargo.toml  README.md
dbus/res/: leaffront-dbus.service
dbus/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs  state.rs
frontend/src/background/: manager.rs
frontend/src/watchdog/: mod.rs
input_glutin/: Cargo.toml
input_glutin/src/: lib.rs
input_pi/: Cargo.toml
input_pi/src/: lib.rs
render_glutin/: Cargo.toml
render_glutin/res/shaders/: color.frag  color.vert  tex.vert
render_glutin/src/: drawer.rs  lib.rs  shader.rs  texture.rs  vbo.rs
render_pi/: Cargo.toml
render_pi/res/shaders/: color.frag
render_pi/src/: brightness.rs  drawer.rs  gl_context.rs  lib.rs  shader.rs  texture.rs  vbo.rs
res/: leaffront.service
res/shaders/: color.vert  tex.frag  tex.vert
src/: clock.rs  color.rs  config.rs  http.rs  main.rs  main_loop.rs  platform.rs  state.rs  texture.rs
src/background/: manager.rs
src/gl_render/: drawer.rs  font.rs  mod.rs  pos.rs  texture.rs  vbo.rs
src/pi/: brightness.rs  gl_context.rs  mod.rs
src/watchdog/: mod.rs
src/weather/: bom.rs  manager.rs  mod.rs
station/: Cargo.toml  build.sh
station/backend_null/: Cargo.toml
station/backend_redis/: Cargo.toml
station/core/src/render/: mod.rs
station/input_pi/: Cargo.toml
station/render_glutin/: Cargo.toml
station/render_glutin/res/shaders/: tex.frag  tex.vert
station/render_glutin/src/: drawer.rs
station/render_pi/src/: shader.rs
station/res/: leaffront-station.service
station/src/: main.rs  main_loop.rs
ui/: Cargo.toml
ui/src/: lib.rs
weather/: Cargo.toml
weather/src/: bom.rs  lib.rs  manager.rs  openweathermap.rs
