[package]
name = "leaffront"
version = "0.1.0"
license = "MIT"
authors = ["James <jselby@jselby.net>"]
description = "A simple photoframe for the Raspberry Pi"
repository = "https://github.com/j-selby/leaffront"
readme = "README.md"

[dependencies]
serde = "1.0.14"
serde_derive = "1.0.14"
toml = "0.4.5"
clap = "2.26.0"

chrono = "0.4.0"

ctrlc = "3.0"

image = "0.15.0"
rand = "0.3.16"

leaffront-core = { path = "core" }
leaffront-weather = { path = "weather" }

leaffront-render-pi = { path = "render_pi", optional = true }
leaffront-input-pi = { path = "input_pi", optional = true }

leaffront-render-glutin = { path = "render_glutin", optional = true }
leaffront-input-glutin = { path = "input_glutin", optional = true }

leaffront-backend-redis = { path = "backend_redis", optional = true }
leaffront-backend-null = { path = "backend_null", optional = true }

[features]
# Frontends
raspberry_pi = ["leaffront-render-pi", "leaffront-input-pi", "redis_backend"]
glutin = ["leaffront-render-glutin", "leaffront-input-glutin", "null_backend"]

# Backends (shouldn't be accessed directly)
redis_backend = ["leaffront-backend-redis"]
null_backend = ["leaffront-backend-null"]

[workspace]
members = ["core", "weather",
            "render_pi", "input_pi",
            "render_glutin", "input_glutin",
            "backend_redis", "backend_null",
            "dbus"]

[package.metadata.deb]
# .deb package for the Raspberry Pi
features = ["raspberry_pi"]
maintainer = "James <jselby@jselby.net>"
copyright = "2017, James <jselby@jselby.net>"
license-file = ["LICENSE", "0"]
extended-description = """Leaffront uses DispmanX + OpenGL to provide a simple slideshow, \
along with basic clock, date and weather information. \
Most values can be configured, and is lightweight enough that other \
applications can be run alongside to enhance the experience."""
depends = "libraspberrypi0, libc6, redis-server"
section = "utility"
priority = "optional"
assets = [
    ["target/release/leaffront", "usr/bin/leaffront", "755"],
    ["example_config.toml", "etc/leaffront/config.toml", "644"],
    ["res/leaffront.service", "lib/systemd/system/leaffront.service", "644"]
]
