[package]
name = "leaffront-station"
version = "0.1.0"
license = "MIT"
authors = ["James <jselby@jselby.net>"]
description = "A weather and notification frontend for Leaffront, designed for embedded systems."
repository = "https://github.com/j-selby/leaffront"
readme = "README.md"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.4"
clap = "2.33.0"

chrono = "0.4.9"

ctrlc = "3.1.3"

image = "0.22.3"
rand = "0.7.2"

leaffront-core = { path = "core" }
leaffront-weather = { path = "weather" }
leaffront-ui = { path = "ui" }

leaffront-render-pi = { path = "render_pi", optional = true }
leaffront-input-pi = { path = "input_pi", optional = true }

leaffront-render-glutin = { path = "render_glutin", optional = true }
leaffront-input-glutin = { path = "input_glutin", optional = true }

leaffront-backend-redis = { path = "backend_redis", optional = true }
leaffront-backend-null = { path = "backend_null", optional = true }

[features]
# Frontends
raspberry_pi = ["leaffront-render-pi", "leaffront-input-pi", "redis_backend"]
glutin = ["leaffront-render-glutin", "leaffront-input-glutin", "null_backend"]

# Backends (shouldn't be accessed directly)
redis_backend = ["leaffront-backend-redis"]
null_backend = ["leaffront-backend-null"]

[workspace]
members = ["core", "weather",
            "render_pi", "input_pi",
            "render_glutin", "input_glutin",
            "backend_redis", "backend_null",
			"dbus"]

[package.metadata.deb]
# .deb package for the Raspberry Pi
features = ["raspberry_pi"]
maintainer = "James <jselby@jselby.net>"
copyright = "2017, James <jselby@jselby.net>"
license-file = ["LICENSE", "0"]
extended-description = """Leaffront uses DispmanX + OpenGL to provide a simple slideshow, \
along with basic clock, date and weather information. \
Most values can be configured, and is lightweight enough that other \
applications can be run alongside to enhance the experience."""
depends = "libraspberrypi0, libc6, redis-server"
section = "utility"
priority = "optional"
assets = [
    ["target/release/leaffront-station", "usr/bin/leaffront-station", "755"],
    ["example_config.toml", "etc/leaffront/config.toml", "644"],
    ["res/leaffront-station.service", "lib/systemd/system/leaffront-station.service", "644"]
]
conf-files = [
    "/etc/leaffront/config.toml"
]
