[package]
name = "leaffront-station"
version = "0.4.1"
license = "MIT"
authors = ["James <1404334+j-selby@users.noreply.github.com>"]
description = "A weather and notification frontend for Leaffront, designed for embedded systems."
repository = "https://github.com/j-selby/leaffront"
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.8.19"
clap = "3.1.18"

chrono = "0.4.19"

ctrlc = "3.2.2"

image = "0.25.2"
rand = "0.8.5"

egui = "0.18.1"

log = "0.4.22"
env_logger = "0.11.5"

tokio = { version = "1", features = ["full"] }
warp = "0.3"

leaffront-core = { path = "core" }
leaffront-weather = { path = "weather" }

leaffront-render-pi = { path = "render_pi", optional = true }
leaffront-input-pi = { path = "input_pi", optional = true }

leaffront-render-glutin = { path = "render_glutin", optional = true }
leaffront-input-glutin = { path = "input_glutin", optional = true }

leaffront-backend-redis = { path = "backend_redis", optional = true }
leaffront-backend-null = { path = "backend_null", optional = true }

[features]
# Frontends
raspberry_pi = ["leaffront-render-pi", "leaffront-input-pi", "null_backend"]
glutin = ["leaffront-render-glutin", "leaffront-input-glutin", "null_backend"]

# Backends (shouldn't be accessed directly)
redis_backend = ["leaffront-backend-redis"]
null_backend = ["leaffront-backend-null"]

[workspace]
members = ["core", "weather",
            "render_pi", "input_pi",
            "render_glutin", "input_glutin",
            "backend_redis", "backend_null",
			"dbus"]

[package.metadata.deb]
# .deb package for the Raspberry Pi
features = ["raspberry_pi"]
maintainer = "James <1404334+j-selby@users.noreply.github.com>"
copyright = "2017, James <1404334+j-selby@users.noreply.github.com>"
license-file = ["LICENSE", "0"]
extended-description = """Leaffront uses DispmanX + OpenGL to provide a simple slideshow, \
along with basic clock, date and weather information. \
Most values can be configured, and is lightweight enough that other \
applications can be run alongside to enhance the experience."""
depends = "libraspberrypi0, libc6, redis-server"
section = "utility"
priority = "optional"
assets = [
    ["target/release/leaffront-station", "usr/bin/leaffront-station", "755"],
    ["example_config.toml", "etc/leaffront/config.toml", "644"],
    ["res/leaffront-station.service", "lib/systemd/system/leaffront-station.service", "644"]
]
conf-files = [
    "/etc/leaffront/config.toml"
]
