[package]
name = "leaffront-input-glutin"
version = "0.1.0"
authors = ["James <1404334+j-selby@users.noreply.github.com>"]
edition = "2018"

[dependencies]
glutin = "0.32.3"
winit = { version = "0.30.0", features = ["rwh_06"] }

leaffront-core = { path = "../core" }

leaffront-render-glutin = { path = "../render_glutin" }
