[package]
name = "leaffront-render-glutin"
version = "0.1.0"
authors = ["James <1404334+j-selby@users.noreply.github.com>"]
edition = "2018"

[dependencies]
glutin = "0.32.3"
glutin-winit = "0.5.0"
winit = { version = "0.30.0", features = ["rwh_06"] }
image = "0.25.8"

gl = "0.14.0"
libc = "*"

log = "0.4.28"

leaffront-core = { path = "../core" }
