[package]
name = "leaffront-render-pi"
version = "0.1.0"
authors = ["James <jselby@jselby.net>"]

[dependencies]
leaffront-core = { path = "../core" }

egl = "0.2.4"
opengles = { git = "https://github.com/seankerr/rust-opengles", rev = "9a139bc" }
videocore = "0.1.3"

image = "0.15.0"
rand = "0.3.16"

libc = "0.1"
