[package]
name = "leaffront-render-pi"
version = "0.1.0"
authors = ["James <1404334+j-selby@users.noreply.github.com>"]
edition = "2018"

[dependencies]
leaffront-core = { path = "../core" }

egl = "0.2.7"
opengles = { git = "https://github.com/seankerr/rust-opengles", rev = "9a139bc" }
videocore = "0.1.3"

image = "0.25.2"

libc = "0.1"
